--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -1,3 +1,31 @@
+@article{le12-036002,
+  author={M D Le and K A McEwen and M Rotter and J Jensen and R I Bewley and T Guidi and D Fort},
+  title={Dispersive crystal field excitations and quadrupolar interactions in UPd 3},
+  journal={Journal of Physics: Condensed Matter},
+  volume={24},
+  number={3},
+  pages={036002},
+  url={http://stacks.iop.org/0953-8984/24/i=3/a=036002},
+  year={2012},
+  abstract={We report inelastic neutron scattering measurements and random phase approximation calculations of the dispersive crystal field excitations of UPd 3 . The measured spectra at lower energies agree with those calculated using quadrupolar interaction parameters deduced from bulk and x-ray scattering measurements. The more intense excitations arising from the hexagonal sites were used to obtain exchange parameters which proved to be anisotropic.}
+}
+
+@article{le10-155136,
+  title = {Magnetic and electrical properties of $(Pu,Lu){Pd}_{3}$},
+  author = {Le, M. D. and McEwen, K. A. and Colineau, E. and Griveau, J.-C. and Eloirdi, R.},
+  journal = {Phys. Rev. B},
+  volume = {82},
+  issue = {15},
+  pages = {155136},
+  numpages = {9},
+  year = {2010},
+  month = {Oct},
+  doi = {10.1103/PhysRevB.82.155136},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.82.155136},
+  publisher = {American Physical Society}
+}
+
+
 @article{blanco13-104411,
   title = {Phasons, amplitude modes, and spin waves in the amplitude-modulated magnetic phase of PrNi${}_{2}$Si${}_{2}$},
   author = {Blanco, J. A. and F\aa{}k, B. and Jensen, J. and Rotter, M. and Hiess, A. and Schmitt, D. and Lejay, P.},
@@ -428,16 +456,7 @@ editor={H. Reiss},
 publisher={Pergamon, Oxford},
 year=1971}
 
-@incollection{dagotto03-1,
-author = {Elbio Dagotto},
-   booktitle     = {Springer Series in Solid-State Sciences},
-   title = {Nanoscale Phase Separation and Colossal Magnetoresistance},
-   chapter   = {1},
-   pages ={1},
-   year      = {2003},
-   publisher = {Springer},
-   volume    = {136}
-}
+
 @article{thole88-3158,
   title = {Branching ratio in x-ray absorption spectroscopy},
   author = {Thole, B. T. and van der Laan, G.},
@@ -1460,11 +1479,6 @@ year=1975,
 pages=1581,
 volume=8}
 
-@book{tjablikov67-1,
-author={S. V. Tjablikov},
-title={Methods in the quantum theory of magnetism},
-publisher={Plenum Press, New York},
-year= 1967}
 @Article{divis00-6774,
  title = {Rare earth borocarbides: Electronic structure calculations and electric field gradients},
   author = {Divi\ifmmode \check{s}\else \v{s}\fi{}, M.  and Schwarz, K.  and Blaha, P.  and Hilscher, G.  and Michor, H.  and Khmelevskyi, S. },
