--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -8,7 +8,10 @@
 \usepackage{graphicx}
  \usepackage{makeidx}
 \usepackage{lscape}
-\usepackage{amssymb,amsbsy,bbm,dsfont}
+\usepackage{amssymb}
+\usepackage{amsbsy}
+\usepackage{bbm}
+\usepackage{dsfont}
 \makeindex
 \newcommand{\m}[1]{\overline{#1}}
 \newcommand{\M}[1]{\underline{#1}}
@@ -23,7 +26,7 @@
 \newcommand{\sixj}[2]{\left\{ \begin{array}{ccc} #1 \\ #2 \end{array} \right\}}
 \newcommand{\hili}[1]{{#1}}
 \newcommand{\hl}[1]{{#1}}
-\newcommand*\Bell{\ensuremath{\boldsymbol\ell}}
+\newcommand{\Bell}{\ensuremath{\boldsymbol\ell}}
 \newcommand{\bm}[1]{\boldsymbol #1}
 \newcommand{\Trace}[1]{\rm Tr \{ #1 \} }
 
@@ -339,9 +342,11 @@ NiO            & INS and RIXS on NiO & {\prg so1ion}\index{so1ion} & \\
 PrNi$_2$B$_2$C & crystal field - fit to neutrons,cp, susc & {\prg cfield}&\cite{mazumdar08-144422}\\
 PrNi$_2$Si$_2$ & excitons in an amplitude modulated mag structure & {\prg so1ion}\index{so1ion} & \cite{blanco13-104411} \\
 Pr$_3$Pd$_{20}$Si$_6$ & hyperfine interactions & {\prg cluster}\index{cluster} & \\
+PuPd$_3$ & susceptibility, heat capacity & {\prg ic1ion}\index{ic1ion} & \cite{le10-155136} \\
 TbCu$_2$ & magnetic phases with field parallel $a$ & {\prg cfield} \\
 testic1ion & Pr$^{3+}$ chargedensity in IC and LS coupling & {\prg ic1ion,cfield} &\\
 tungsten\_phonons & phonons in tungsten & {\prg phonon} & \\
+UPd$_3$ & dispersive CEF excitations, quadrupolar interactions  & {\prg so1ion}\index{so1ion} & \cite{le12-036002} \\
  \end{tabular}
 \end{center}   
 \end{table}
