bug in creation of mcdisp.trs removed (maxE option), manual update

--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -1623,7 +1623,7 @@ S_{\rm mag}^{\rm inel,\alpha\beta}(\mbf Q,\omega)&=&\left( \frac{ \gamma r_0}{2 
 %(\delta_{\alpha\beta}- \frac{Q_{\alpha} Q_{\beta}}{|\mbf Q|^2}) 
 \frac{1}{2\pi\hbar}\int_{-\infty}^{+\infty}dt e^{i\omega t}
 \frac{1}{N}\sum_{nn'} e^{-W_n(Q)- W_{n'}(Q)}\\
-&\times&  e^{-i\mbf Q \cdot (\mbf R_n-\mbf R_{n'})}   (\langle \hat M_{\perp\alpha}^{n \dag}(t,\mbf Q)  \hat M_{\perp\beta}^{n'}(0,\mbf Q) \rangle_{T,H}
+&\times&  e^{-i\mbf Q \cdot (\mbf R_n-\mbf R_{n'})}   (\langle \hat M_{\alpha}^{n \dag}(t,\mbf Q)  \hat M_{\beta}^{n'}(0,\mbf Q) \rangle_{T,H}
 - \langle \hat M^{n \dag}_{\alpha}(\mbf Q)\rangle_{T,H} \langle \hat M^{n'}_{\beta}(\mbf Q) \rangle_{T,H})\nonumber
 \end{eqnarray}
 
