--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -81,7 +81,9 @@ community this program would not have come into existence.
 \section*{What is New ?}
 
 \subsection*{ ... in version 5.0 ...}
-\begin{itemize} 
+\begin{itemize}
+\item programs mcdiff, mcdisp, ansitropy make use of parallel processing (compiled for 2 
+        processor machines, if you want to recompile for more threads see install.txt) 
 \item cluster module for calculation of clusters of ions and/or hyperfine interactions 
 \item bfk program added (J Keller) - Becker-Fulde-Keller model for conduction electron interactions
 \item singleion program extended to be able to read sipf files directly, cpsingleion to calculate specific
