--- a/install.txt
+++ b/install.txt
@@ -63,9 +63,9 @@ Installation Procedure:
  make fast=1
 
  if you have a multiple core processor, change #define NUM_THREADS
- in bin/src/mcdisp.c to according to your system, i.e. to
- 2 for a double core or 4 for a quadruple core computer and 
- recompile mcphas.exe by typing:
+ in bin/src/mcdisp.c and mcphas_htcalc.c  according to your system, i.e. to
+ 2 for a double core or 4 for a quadruple core computer. 
+ Then  recompile mcphas.exe by typing:
 
  cd bin/src
  set threads=1
@@ -155,9 +155,9 @@ c) Now the installation should be complete. To test the Program:
  (this might work not on all systems)
 
  if you have a multiple core processor, change #define NUM_THREADS
- in bin/src/mcdisp.c to according to your system, i.e. to
- 2 for a double core or 4 for a quadruple core computer and 
- recompile mcphas.exe by typing:
+ in bin/src/mcdisp.c and mcphas_htcalc.c to according to your system, i.e. to
+ 2 for a double core or 4 for a quadruple core computer. 
+ Then recompile mcphas.exe by typing:
 
  cd bin/src
  threads=1  make
