--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -43,9 +43,9 @@
  \vspace{2cm}
  \\ \today}
 
-\author{M. Rotter\thanks{Max Planck Institute for Chemical Physics of Solids,N\"othnitzer Str. 40, 01187 Dresden, 
+\author{M. Rotter\thanks{Max Planck Institute for Chemical Physics of Solids, N\"othnitzer Str. 40, D-01187 Dresden, 
 Germany, email: martin.rotter@cpfs.mpg.de}, \and
-Duc Manh Le \thanks{Helmholtz-Zentrum Berlin f\"ur Materialien und Energie, Berlin, Germany}
+Duc Manh Le \thanks{Dept. Physics and Astronomy, Seoul National University, Seoul 151-742, Korea}
 \and Joachim Keller \thanks{Universit\"at Regensburg}
 \and Lucian G Pascut,~Till Hoffmann 
 \thanks{University of Oxford, Physics Department, Clarendon Laboratory, Parks Road, Oxford, UK},
